--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,3 +40,9 @@ target_include_directories(${PROJECT_NAME} PUBLIC include)
 if(BUILD_TESTS)
     add_subdirectory(tests)
 endif()
+
+if(UNIX)
+    install(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
+else()
+    install(TARGETS ${PROJECT_NAME} DESTINATION ./bin)
+endif()
